--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -22,24 +22,16 @@
                     <h5 class="card-title text-center pb-0 fs-4">SNSへようこそ。<br>ログインしてください。</h5>
                     <p class="text-center small">ログインIDとパスワードを入力してください。</p>
                   </div>
+                  
+                  <div role="alert" class="alert alert-danger alert-dismissible fade show" th:if="${loginValidationError != null}">
+						  <div  th:each="error :  ${loginValidationError}">
+                   	  			<i class="bi bi-exclamation-octagon me-1"></i>
+                    	  		<span th:text="${error}">エラーメッセージを表示します。</span>
+                    	  	</div>
+                    	  		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                   		</div>
 
-                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <div>
-                      <i class="bi bi-exclamation-octagon me-1"></i>
-                      <span>エラーメッセージを表示します。</span>
-                    </div>
-                    <div>
-                      <i class="bi bi-exclamation-octagon me-1"></i>
-                      <span>エラーメッセージを表示します。</span>
-                    </div>
-                    <div>
-                      <i class="bi bi-exclamation-octagon me-1"></i>
-                      <span>エラーメッセージを表示します。</span>
-                    </div>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                  </div>
-
-                  <form class="row g-3 needs-validation" method="post" th:action="@{/login}" novalidate>
+                  <form class="row g-3 " method="post" th:action="@{/login}" novalidate>
 
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">ログインID</label>
