--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -13,10 +13,24 @@
     <div class="pagetitle">
       <h1>Home</h1>
     </div>
+    
+
     <!-- End Page Title -->
     <section class="section">
       <div class="row">
         <div class="col-lg-8">
+			    <ul class="nav nav-tabs d-flex" id="myTabjustified" role="tablist">
+                <li class="nav-item flex-fill" role="presentation">
+                  <button class="nav-link w-100" id="work-tab" data-bs-toggle="tab" data-bs-target="#home-justified" type="button" role="tab" aria-controls="work" aria-selected="false" tabindex="-1">仕事</button>
+                </li>
+                <li class="nav-item flex-fill" role="presentation">
+                  <button class="nav-link w-100" id="travel-tab" data-bs-toggle="tab" data-bs-target="#profile-justified" type="button" role="tab" aria-controls="travel" aria-selected="false" tabindex="-1">旅行</button>
+                </li>
+                <li class="nav-item flex-fill" role="presentation">
+                  <button class="nav-link w-100 " id="living-tab" data-bs-toggle="tab" data-bs-target="#contact-justified" type="button" role="tab" aria-controls="living" aria-selected="true">日常</button>
+                </li>
+              </ul>
+              
           <div th:fragment="List-fragment">
             <div id="postsList">
               <div th:each="post : ${displayPostsList}">
@@ -122,6 +136,19 @@
                   <label for="inputNanme4" class="form-label">本文</label>
                   <textarea class="form-control" name="body" style="height: 100px"></textarea>
                 </div>
+                
+                	<div class="col-12">
+                  <label for="inputNanme4" class="form-label">カテゴリー</label>
+                  <div >
+                    <select class="form-select" aria-label="Default select example" name="category">
+                      <option selected="">カテゴリーを選択してください</option>
+                      <option th:value="1">仕事</option>
+                      <option th:value="2">旅行</option>
+                      <option th:value="3">日常</option>
+                    </select>
+                  </div>
+                </div>
+                
                 <div class="col-12">
                   <label for="inputNanme4" class="form-label">写真</label>
                   <input class="form-control" name="file" type="file" id="formFile">
